--- a/app/src/main/res/layout/activity_main10.xml
+++ b/app/src/main/res/layout/activity_main10.xml
@@ -18,7 +18,7 @@
         android:fontFamily="@font/roboto_slab"
         android:text="A"
         android:textSize="90dp"
-        android:transitionName="8_1"
+        android:transitionName="1"
         android:textColor="@color/wit"/>
 
     <TextView
@@ -30,7 +30,7 @@
         android:text="ccount"
         android:textColor="@color/wit"
         android:textSize="45dp"
-        android:transitionName="8_2"
+        android:transitionName="2"
         app:layout_constraintBottom_toBottomOf="@id/text_1"
         app:layout_constraintStart_toEndOf="@id/text_1" />
 
@@ -43,7 +43,7 @@
         android:layout_marginTop="100dp"
         android:layout_marginRight="25dp"
         android:src="@drawable/circle_1"
-        android:transitionName="8_3"/>
+        android:transitionName="3"/>
 
     <TextView
         android:id="@+id/text_3"
@@ -56,5 +56,5 @@
         android:text="dashboard"
         android:textColor="@color/wit"
         android:textSize="14dp"
-        android:transitionName="8_4"/>
+        android:transitionName="4"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
