activity_main12.xml is geupgrade en er zijn drie nieuwe drawables en twee kleuren erbij

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#00FA9A</color>
 
     <color name="wit">#ffffff</color>
+    <color name="blauw">#00688B</color>
+    <color name="groen">#00FA9A</color>
 </resources>
