--- a/app/src/main/res/layout/activity_main12.xml
+++ b/app/src/main/res/layout/activity_main12.xml
@@ -63,10 +63,11 @@
 
         <androidx.core.widget.NestedScrollView
             android:id="@+id/nestle"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="400dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/text_2">
+            app:layout_constraintTop_toBottomOf="@id/text_2"
+            android:layout_margin="40dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -76,19 +77,18 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/constraint_1"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp">
+                    android:layout_height="wrap_content">
 
                     <ImageView
                         android:id="@+id/image_2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:layout_marginRight="25dp"
-                        android:src="@drawable/but_5"
+                        android:src="@drawable/but_8"
                         android:transitionName="3"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"/>
 
                     <TextView
                         android:id="@+id/text_4"
@@ -96,7 +96,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/roboto_slab"
                         android:text="Name"
-                        android:textColor="@color/wit"
+                        android:textColor="@color/groen"
                         android:textSize="48dp"
                         android:transitionName="4"
                         app:layout_constraintBottom_toBottomOf="@id/image_2"
@@ -108,14 +108,15 @@
                         android:id="@+id/edit_text_1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/but_2"
+                        android:background="@drawable/but_10"
                         android:gravity="center"
                         android:hint="name here"
-                        android:textColor="@color/wit"
+                        android:textColor="@color/blauw"
                         android:textColorHint="@color/wit"
                         android:transitionName="7"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/image_2"/>
+                        app:layout_constraintTop_toBottomOf="@id/image_2"
+                        app:layout_constraintEnd_toEndOf="parent"/>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -129,11 +130,11 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:layout_marginRight="25dp"
-                        android:src="@drawable/but_5"
+                        android:src="@drawable/but_8"
                         android:transitionName="7"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"/>
 
                     <TextView
                         android:id="@+id/text_5"
@@ -141,26 +142,27 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/roboto_slab"
                         android:text="Maker"
-                        android:textColor="@color/wit"
+                        android:textColor="@color/groen"
                         android:textSize="48dp"
+                        android:transitionName="8"
                         app:layout_constraintBottom_toBottomOf="@id/image_3"
                         app:layout_constraintEnd_toEndOf="@id/image_3"
                         app:layout_constraintStart_toStartOf="@id/image_3"
-                        app:layout_constraintTop_toTopOf="@id/image_3"
-                        android:transitionName="8"/>
+                        app:layout_constraintTop_toTopOf="@id/image_3" />
 
                     <EditText
                         android:id="@+id/edit_text_2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/but_2"
+                        android:background="@drawable/but_10"
                         android:gravity="center"
                         android:hint="maker here"
-                        android:textColor="@color/wit"
+                        android:textColor="@color/blauw"
                         android:textColorHint="@color/wit"
                         android:transitionName="11"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/image_3"/>
+                        app:layout_constraintTop_toBottomOf="@id/image_3"
+                        app:layout_constraintEnd_toEndOf="parent"/>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -174,10 +176,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:layout_marginRight="25dp"
-                        android:src="@drawable/but_5"
+                        android:src="@drawable/but_8"
                         android:transitionName="3"
                         app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
@@ -186,7 +188,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/roboto_slab"
                         android:text="calories/100g"
-                        android:textColor="@color/wit"
+                        android:textColor="@color/groen"
                         android:textSize="48dp"
                         android:transitionName="4"
                         app:layout_constraintBottom_toBottomOf="@id/image_4"
@@ -198,14 +200,15 @@
                         android:id="@+id/edit_text_3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/but_2"
+                        android:background="@drawable/but_10"
                         android:gravity="center"
                         android:hint="calories/100g here"
-                        android:textColor="@color/wit"
+                        android:textColor="@color/blauw"
                         android:textColorHint="@color/wit"
                         android:transitionName="7"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/image_4"/>
+                        app:layout_constraintTop_toBottomOf="@id/image_4"
+                        app:layout_constraintEnd_toEndOf="parent"/>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -219,11 +222,11 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:layout_marginRight="25dp"
-                        android:src="@drawable/but_5"
+                        android:src="@drawable/but_8"
                         android:transitionName="3"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent" />
 
                     <TextView
                         android:id="@+id/text_7"
@@ -231,7 +234,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/roboto_slab"
                         android:text="size in grams"
-                        android:textColor="@color/wit"
+                        android:textColor="@color/groen"
                         android:textSize="48dp"
                         android:transitionName="4"
                         app:layout_constraintBottom_toBottomOf="@id/image_5"
@@ -243,14 +246,15 @@
                         android:id="@+id/edit_text_4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/but_2"
+                        android:background="@drawable/but_10"
                         android:gravity="center"
                         android:hint="size in grams here"
-                        android:textColor="@color/wit"
+                        android:textColor="@color/blauw"
                         android:textColorHint="@color/wit"
                         android:transitionName="7"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/image_5"/>
+                        app:layout_constraintTop_toBottomOf="@id/image_5"
+                        app:layout_constraintEnd_toEndOf="parent"/>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -259,24 +263,47 @@
         </androidx.core.widget.NestedScrollView>
     <ImageView
         android:id="@+id/image_7"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/but_1"
+        android:src="@drawable/but_5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/nestle"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        android:layout_marginTop="20dp"/>
 
     <TextView
         android:id="@+id/text_8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/roboto_slab"
-        android:text="Add Food Object"
-        android:textSize="36dp"
+        android:text="Add Food To Foodlist"
+        android:textSize="20dp"
         android:textColor="@color/wit"
         app:layout_constraintStart_toStartOf="@id/image_7"
         app:layout_constraintEnd_toEndOf="@id/image_7"
         app:layout_constraintTop_toTopOf="@id/image_7"
         app:layout_constraintBottom_toBottomOf="@id/image_7"/>
+
+    <ImageView
+        android:id="@+id/image_8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/but_5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/image_7"
+        android:layout_marginTop="10dp"/>
+
+    <TextView
+        android:id="@+id/text_9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/roboto_slab"
+        android:text="Add Food To Today and foodlist"
+        android:textSize="20dp"
+        android:textColor="@color/wit"
+        app:layout_constraintStart_toStartOf="@id/image_8"
+        app:layout_constraintEnd_toEndOf="@id/image_8"
+        app:layout_constraintTop_toTopOf="@id/image_8"
+        app:layout_constraintBottom_toBottomOf="@id/image_8"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
